--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <header>
         <div class="header-content">
             <!-- Add your profile picture here -->
-            <img src="./photo.jpg" alt="Your Profile Picture" class="profile-picture">
+            <img src="./photojpg.jpg" alt="Your Profile Picture" class="profile-picture">
             <h1>BHARATH RAJ B</h1>
             <p> WEB DEVELOPER</p>
         </div>
